<resources>
    <string name="app_name">Group8_Capstone</string>
    <string name="art">art</string>
    <string name="beach">beach</string>
    <string name="horror">horror</string>
    <string name="music">music</string>
    <string name="romance">romance</string>
    <string name="sports">sports</string>
    <string name="text">What are you interested in?</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="noAcct">Don\'t have an account?</string>
    <string name="eventrack">eventrack</string>
    <string name="samseng">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="createAcc">Already have an account?</string>
    <string name="event">Event</string>
    <string name="number">12.2k</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="changepfp">change profile picture</string>
    <string name="name2">Name</string>
    <string name="email2">email@gmail.com</string>
    <string name="password2">********</string>
    <string name="change">change</string>
    <string name="types">event type</string>
    <string name="themes">themes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="tag">Custom Tags</string>
    <string name="advSearch">advanced search</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="date">mm/dd/yyyy</string>
    <string name="to">to</string>
    <string name="notif_text">No Notifications</string>
    <string name="person">Person</string>
    <string name="gallery">Gallery</string>
    <string name="reviews">Reviews</string>
    <string name="eventType">art | convention</string>
    <string name="follow">follow</string>
    <string name="eventDate">May 26 – 27, 2022 | 10:00am - 6:00pm</string>
    <string name="hashtags">#customTag #happy #cosplay #cartoons #art</string>
    <string name="eventOrganizer">Event organizer</string>
    <string name="guest">Guest</string>
    <string name="review">(2 reviews)</string>
    <string name="upcoming">upcoming events</string>
    <string name="following">following</string>
    <string name="month">month</string>
    <string name="find">Oops! Looks like we couldn\'t find what you\'re looking for</string>
    <string name="custom">This feature is unavailable in your country</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>