<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/samseng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/robotomono"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/robotomono"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/robotomono"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lightBlue"
        android:fontFamily="@font/robotomono"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/robotomono"
        android:text="@string/createAcc"
        android:textColor="@color/grey2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomono"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>