<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <FrameLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back"
                android:text=""
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/eventrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomono"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.276"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:srcCompat="@drawable/pfp_size" />

    <Button
        android:id="@+id/changePfp"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/lightBlue"
        android:fontFamily="@font/robotomono"
        android:text="@string/changepfp"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.165"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/robotomono"
        android:text="@string/name2"
        android:textColor="@color/grey2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomono"
        android:gravity="end"
        android:text="@string/name"
        android:textColor="@color/grey2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robotomono"
        android:text="@string/email"
        android:textColor="@color/grey2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomono"
        android:gravity="end"
        android:text="@string/email2"
        android:textColor="@color/grey2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robotomono"
        android:text="@string/password"
        android:textColor="@color/grey2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomono"
        android:gravity="end"
        android:text="@string/password2"
        android:textColor="@color/grey2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomono"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.476" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomono"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/robotomono"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.619" />
</androidx.constraintlayout.widget.ConstraintLayout>