<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <ImageView
        android:id="@+id/pfp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pfpred"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/samseng" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/robotomono"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/pfp"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/pfp"
        app:layout_constraintTop_toBottomOf="@+id/pfp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.14">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-44dp">

            <ImageView
                android:id="@+id/calendarPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/calendar"
                android:contentDescription="@string/samseng" />

            <TextView
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomono"
                android:text="@string/calendar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/calendarPic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.172"
                app:layout_constraintStart_toEndOf="@+id/calendarPic"
                app:layout_constraintTop_toTopOf="@+id/calendarPic"
                app:layout_constraintVertical_bias="0.521" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.145">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-44dp">

            <ImageView
                android:id="@+id/settingsPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/settings"
                android:contentDescription="@string/samseng" />

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomono"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/settingsPic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.172"
                app:layout_constraintStart_toEndOf="@+id/settingsPic"
                app:layout_constraintTop_toTopOf="@+id/settingsPic"
                app:layout_constraintVertical_bias="0.521" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <Button
        android:id="@+id/logout"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomono"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.709"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:text=""
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>